# shmail

./: .ai-rules  .cursorrules  .gitignore  README.md  pyproject.toml
.agent/: README.md  context.md  roadmap.md  security.md  system.md
.agent/catalog/: subagents.md  workflows.md
.agent/contracts/: interaction-standard.md  migration-integrity.md
.agent/roles/: architect.md  auditor.md  developer.md  qa-engineer.md  tutor.md
.agent/rules/: keyring.md  python.md  textual.md
.opencode/: settings.json
.opencode/agents/: architect.md  auditor.md  developer.md  instruction-auditor.md  migration-auditor.md  policy-auditor.md  qa-auditor.md  qa-engineer.md  quartermaster.md  test-strategist.md  tutor.md
.opencode/commands/: execute-changes.md  list-framework.md  session-close.md  session-start.md  start-session.md  upgrade-framework.md
shmail/: app.py  config.py  shmail.tcss
shmail/models/: __init__.py
shmail/screens/: __init__.py  label_editor.py  loading.py  login.py  main.py  message_actions.py  message_draft.py  mutation_inspector.py  thread_compose_action.py  thread_messages.py  viewer.py
shmail/services/: __init__.py  attachments.py  auth.py  db.py  draft_preview.py  (+16 more)
tests/: test_attachment_service.py  test_db.py  test_label_editor_colors.py  test_label_state_service.py  test_lifecycle_recovery.py  test_main_flow.py  test_message_draft_service.py  test_message_mutation_service.py  test_mutation_log_service.py  test_parser.py  test_pilot_theme_surfaces.py  test_service_standards.py  test_sync.py  test_theme_service.py  test_viewer_interactions.py
(+11 files in other folders)
